--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-link {
+  text-decoration: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: rgba(209, 232, 251, 1);
+  box-shadow: inset -1px -1px 5px rgba(209, 232, 251, 0.5), inset 1px 1px 5px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  color: black;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  font-size: 13px;
+  z-index: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.active, .app-link:hover {
+  box-shadow: -1px -1px 5px rgba(209, 232, 251, 1), 1px 1px 5px rgba(0, 0, 0, 0.3);
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-icon {
+  height: 30px;
+  width: 30px;
+  color: rgb(232, 246, 255) ;
 }
